--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,6 @@
         android:id="@+id/inventory"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
     </FrameLayout>
 
     <FrameLayout
@@ -40,6 +39,11 @@
         android:layout_height="match_parent" >
 
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/tutorial"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <FrameLayout
         android:id="@+id/research_tree"
